tests: fixing coverage tests